2003-07-27  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/CheckButton.xml: add small example, update
	* en/Gtk/Combo.xml: add example, update
	
	* en/Gtk/TreeModelFlags.xml:
	* en/Gtk/RcFlags.xml: more documentation from 
	Jonathan Kessler <Jwkpiano1@comcast.net>.

2003-07-26  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/Orientation.xml: 
	* en/Gtk/MetricType.xml:
	* en/Gtk/ObjectFlags.xml: more documentation from 
	Jonathan Kessler <Jwkpiano1@comcast.net>.

2003-07-25  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/DestDefaults.xml: more documentation from 
	Jonathan Kessler <Jwkpiano1@comcast.net>.

	* en/Gtk/TreeViewColumnSizing.xml: added documentation from
	Jonathan Kessler <Jwkpiano1@comcast.net>.

2003-07-24  John Luke  <jluke@cfl.rr.com>

	* en/Rsvg.xml: add summary page
	* en/GConf.xml: add summary page

2003-07-22  John Luke  <jluke@cfl.rr.com>

	* en/Rsvg: add directory
	* en/Rsvg/*.xml: add initial docs
	* en/Rsvg/Tool.xml: add example
	* en/Gtk/Menu.xml: add example

2003-07-22  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/FSButton.xml: Removed the constructor, per the custom
	file update and added documentation.

2003-07-20  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/FileSelection.xml: update and add example

2003-07-19  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/OptionMenu.xml: documented
	
2003-07-18  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TreeView.xml: add TreeViewDemo example
	* en/Pango/Weight.xml: remove trailing "n"

2003-07-18  Duncan Mak  <duncan@ximian.com>

	* en/Pango/Alignment.xml:
	* en/Pango/AttrTyoe.xml:
	* en/Pango/CoverageLevel.xml:
	* en/Pango/Direction.xml:
	* en/Pango/FontMask.xml:
	* en/Pango/OTTableType.xml:
	* en/Pango/Stretch.xml:
	* en/Pango/Style.xml:
	* en/Pango/TabAlign.xml:
	* en/Pango/Underline.xml:
	* en/Pango/Variant.xml:
	* en/Pango/Weight.xml:
	* en/Pango/WrapMode.xml: All enumerations in Pango are documented.
	

2003-07-17  John Luke  <jluke@cfl.rr.com>
	
	* en/Gtk/CellRendererMode.xml: documented