@@ -1,3 +1,7 @@
+2003-07-28  Duncan Mak  <duncan@ximian.com>
+
+	* en/Glade/XML.xml: Added some documentation.
+
 2003-07-27  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/CheckButton.xml: add small example, update
